Updated some content, hide some projects.

--- a/src/Portfolio.css
+++ b/src/Portfolio.css
@@ -26,11 +26,18 @@ a:visited {
 	color: #FFD541;
 }
 
+/*a[target="_blank"]:after {
+  content: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAQElEQVR42qXKwQkAIAxDUUdxtO6/RBQkQZvSi8I/pL4BoGw/XPkh4XigPmsUgh0626AjRsgxHTkUThsG2T/sIlzdTsp52kSS1wAAAABJRU5ErkJggg==);
+  margin: 0 3px 0 5px;
+}*/
+
 .styleborder {
 	border-width: 2px;
 	border-style: solid;
 	border-color: #F9A31B #FFD541;
 }
+
+button:focus {outline:0;}
 
 #about {
 	width: 10%;
@@ -99,7 +106,8 @@ ul li.styleborder hr:last-child {
 }
 
 #projects ul.tags li {
-	margin: 4px 0;
+	margin: 4px 4px;
+	float: left;
 }
 
 #projects button {
