--- a/src/Portfolio.css
+++ b/src/Portfolio.css
@@ -12,6 +12,7 @@ h1, h2, h3, h4, h5 {
 ul {
 	list-style: none;
 	margin: 0;
+	padding: 0;
 }
 
 a {
@@ -26,11 +27,6 @@ a:visited {
 	color: #FFD541;
 }
 
-/*a[target="_blank"]:after {
-  content: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAQElEQVR42qXKwQkAIAxDUUdxtO6/RBQkQZvSi8I/pL4BoGw/XPkh4XigPmsUgh0626AjRsgxHTkUThsG2T/sIlzdTsp52kSS1wAAAABJRU5ErkJggg==);
-  margin: 0 3px 0 5px;
-}*/
-
 .styleborder {
 	border-width: 2px;
 	border-style: solid;
@@ -40,13 +36,14 @@ a:visited {
 button:focus {outline:0;}
 
 #about {
-	width: 10%;
+	width: 200px;
 	position: absolute;
 	padding: 10px;
 }
 
 #menu {
 	margin: 10px 0;
+	padding-left: 30px;
 }
 
 h1 {
@@ -55,7 +52,7 @@ h1 {
 }
 
 #projects, #resume {
-	margin: 0 10%;
+	margin: 0 10% 0 220px;
 	padding-top: 20px;
 }
 
@@ -130,4 +127,50 @@ ul li.styleborder hr:last-child {
 	margin: 8px 0;
 	padding: 0;
 	font-size: 0.9em;
+}
+
+@media (max-width: 1100px) {
+	#projects ul li.project img {
+		max-width: 100%;
+	}
+}
+
+@media (max-width: 900px) {
+	#projects ul li.project img {
+		width: 100%;
+	}
+	
+	#about {
+		width: 140px;
+		position: absolute;
+		padding: 10px;
+	}
+
+	#projects, #resume {
+		margin: 0 10% 0 160px;
+		padding-top: 20px;
+	}
+}
+
+@media (max-width: 600px) {
+	#about {
+		width: 90%;
+		position: absolute;
+		padding: 5px;
+	}
+	
+	#about ul li {
+		float: left;
+		margin-right: 20px;
+	}
+	
+	#about p {
+		clear: both;
+		padding-top: 10px;
+	}
+	
+	#resume, #projects {
+		margin: 0 2%;
+		padding-top: 190px;
+	}
 }
